# etl-painel-perdas

./: .gitignore  README.md  main.py  pyproject.toml
etl_athena_painel/: cli.py  colorlogs.py  load.py  logs.py  main.py  transform.py
